[package]
name = "woo2"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
actix-web = "4.11.0"
tokio = {version = "1.45.0", features = ["full"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"]}
http-handler = { path = "./http-handler/"}
dotenv = "0.15.0"
